# ASA-SERVER-MANAGER-2.0

./: .gitignore  BUGFIX_v2.1.1.md  BUGFIX_v2.1.2.md  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  RELEASE_v2.1.3.md  RELEASE_v2.1.4.md  build.ps1  build_with_keys.ps1  gen_keys.ps1  gen_keys_2.ps1  generate_keys.js  index.html  keys.txt  keys_cmd.txt  keys_direct.txt  keys_final.txt  keys_ps_2.txt  package-lock.json  package.json  patch_notes_v2.2.2.md  patch_notes_v2.2.4.md  patch_notes_v2.2.5.md  read_direct.js  read_keys.js  sanitize_read.js  sanitize_read_esm.js  tailwind.config.js
.github/workflows/: build.yml
asa-cli/: Cargo.toml
asa-cli/src/: backup.rs  config.rs  errors.rs  main.rs  network.rs
changelogs/: CHANGELOG_v2.2.1.md  v2.2.0.md
docs/: NonDedicatedImport.md
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  build_errors.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: backup.rs  cluster.rs  config.rs  file_manager.rs  import.rs  mod.rs  mods.rs  player.rs  plugin.rs  rcon.rs  scheduler.rs  server.rs  system.rs
src-tauri/src/db/: mod.rs  schema.sql
src-tauri/src/services/: api_key_manager.rs  backup_service.rs  config_generator.rs  discord.rs  file_watcher.rs  guardian.rs  health_checker.rs  ini_parser.rs  mod.rs  mod_scraper.rs  network.rs  performance_tracker.rs  player_intelligence.rs  process_manager.rs  rcon.rs  server_installer.rs  steamcmd.rs
src/components/: UpdateChecker.tsx
src/components/config/: ArrayEditor.tsx  ConfigBuilder.tsx  ConfigTooltip.tsx  PresetSelector.tsx  StatMultiplierEditor.tsx
src/components/help/: HelpDocumentation.tsx
src/components/layout/: AppLayout.tsx  Sidebar.tsx  SplashScreen.tsx  WelcomeOverlay.tsx
src/components/onboarding/: OnboardingTour.tsx
src/components/settings/: PortValidator.tsx  (+8 more)
src/data/: configMappings.ts  mapProfiles.ts  presets.ts
src/pages/: Backups.tsx  ClusterManager.tsx  ConfigEditor.tsx  Dashboard.tsx  DiscordBot.tsx  FileManager.tsx  LogsConsole.tsx  ModManager.tsx  PluginManager.tsx  RconConsole.tsx  Scheduler.tsx  ServerManager.tsx  Settings.tsx  VisualSettingsManager.tsx
src/stores/: serverStore.ts  uiStore.ts
src/styles/: globals.css
src/types/: images.d.ts  index.ts
src/utils/: helpers.ts  tauri.ts  updateHistory.ts
(+9 files in other folders)
